Alinhar textos dos menus - OK

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -169,7 +169,7 @@ $c_red: #bf0000;
     transition: 200ms ease-out;
     height: 0;
     background: #fff;
-    padding: 25px;
+    padding: 25px 25px 25px 0;
     border-bottom: 1px solid #eee;
 
     .content {
