--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -186,8 +186,6 @@ $c_red: #bf0000;
         .first-half {
           width: 50%;
           min-height: 400px;
-          max-height: 400px;
-          overflow: auto;
 
           /* width */
           &::-webkit-scrollbar {
@@ -218,7 +216,7 @@ $c_red: #bf0000;
 
       .itens {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(5, 1fr);
         grid-column-gap: 1rem;
         grid-row-gap: 1rem;
 
@@ -226,15 +224,16 @@ $c_red: #bf0000;
           display: flex;
           flex-direction: column;
 
-          h3 {
+          .sub-ttl {
             font-size: $fontSizeHeader;
             margin: 0;
             text-transform: uppercase;
             margin-bottom: 5px;
             font-weight: bold;
+            text-decoration: none;
           }
 
-          a {
+          a:not(.sub-ttl) {
             font-size: 10px;
             color: #333;
             width: fit-content;
@@ -263,9 +262,13 @@ $c_red: #bf0000;
           background-position: -240px -600px;
         }
 
-        &.infantil,
+        &.infantil {
+          background-size: 100%;
+          background-position: -1px -30px;
+        }
+
         &.masculino {
-          background-size: 130%;
+          background-size: 115%;
           background-position: -1px -30px;
         }
 
@@ -326,7 +329,6 @@ $c_red: #bf0000;
     &.visible {
       min-height: 300px;
       height: fit-content;
-      max-height: 500px;
       display: block;
       // overflow: auto;
 
