--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -187,6 +187,9 @@ $c_red: #bf0000;
           width: 50%;
           min-height: 400px;
 
+          &.infantil {
+            width: 75%;
+          }
           /* width */
           &::-webkit-scrollbar {
             width: 3px;
@@ -216,7 +219,7 @@ $c_red: #bf0000;
 
       .itens {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(8, 1fr);
         grid-column-gap: 1rem;
         grid-row-gap: 1rem;
 
