## Primeira sugestão da busca está cortado -- OK

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -33,6 +33,10 @@ $c_red: #bf0000;
   display: none;
 }
 
+.rr_auto_complete_search.visible {
+  margin-top: 33px;
+}
+
 // teste
 .juni-new-header-desktop {
   position: fixed;
